cluster-talos/kubernetes/infrastructure/platform/kasten-io/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kasten-io
  labels:
    pod-security.kubernetes.io/enforce: privileged
